# HumanGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  author  humagl  humangl  main.cpp
include/: Camera.hpp  Model.hpp
res/shaders/: stand_fragment.glsl  stand_vertex.glsl
shaders/: fragment.glsl
src/: 42run.h  Animation.cpp  Animation.h  AnimationKey.h  Animator.cpp  Animator.h  Application.cpp  Camera.cpp  Display.cpp  Entity.cpp  Entity.h  Events.cpp  Events.h  GameState.cpp  Makefile  Matrix.cpp  Model.cpp  Model.h  Render.cpp  Render.h  Texture.cpp  camera.h  collision.cpp  controls.cpp  engine.cpp  engine.h  main.cpp  maths.cpp  maths.h  openglInputs.cpp  replace.cpp  sandbox.cpp
src/Debug/: DebugGL.cpp
src/Renderer/: Master.cpp  Quad.cpp  Simple.cpp
src/Shader/: Shader.cpp  ShaderLoader.cpp  SimpleShader.cpp
src/States/: Playing.cpp
src/test/: Camera.cpp  Camera.h  Mesh.hpp  Model.cpp  Model.hpp  Shader.hpp
